--- a/src/app/main/pages/spare-parts/spare-parts.component.scss
+++ b/src/app/main/pages/spare-parts/spare-parts.component.scss
@@ -43,6 +43,7 @@
   
   .footer__btn-save{
       background: #6200EE;
+      margin-right: 100px;
       color: white;
       padding: 0px 30px 0px 30px;
   
