--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -52,14 +52,14 @@
           <th mat-header-cell *matHeaderCellDef>
             Acciones
           </th>
-          <td mat-cell *matCellDef="let raw; let i = index">
+          <td mat-cell *matCellDef="let element; let i = index">
             <ng-container>
               <mat-menu #rawMenu="matMenu">
                 <button class="w3-small" mat-menu-item (click)="openDialog('validate',i)">
                   <mat-icon>edit</mat-icon>
                   Validar
                 </button>
-                <button class="w3-small" mat-menu-item (click)="openDialog('edit',i)">
+                <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
                   <mat-icon>edit</mat-icon>
                   Editar
                 </button>
