:construction: Validate improvement entry (advance)

--- a/src/app/main/pages/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.html
@@ -3,7 +3,7 @@
         Validación de logística
         <mat-divider></mat-divider>
     </h2>
-    <form class="container-form" [formGroup]="validationLogisticForm" (ngSubmit)="save()">
+    <form class="container-form" [formGroup]="validationLogisticForm">
         <mat-dialog-content class="mat-typography">
             <h3>Detalles de mejora</h3>
             <!-- description -->
@@ -55,22 +55,22 @@
             <h3>Lista de partes</h3>
 
             <div formArrayName="parts">
-                <div *ngFor="let _ of parts.controls; let i=index" class="form-array">
+                <div *ngFor="let _ of parts.controls; index as i; index as j" class="form-array">
                     <div [formGroupName]="i" class="container-form-array">
-                        <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
-                            <mat-label>Label</mat-label>
-                            <input matInput placeholder="Label" formControlName="label">
+                        <mat-form-field appearance="outline" style="width: 120px;" class="container-form-array__inputs">
+                            <mat-label>Parte</mat-label>
+                            <input matInput placeholder="Label" formControlName="sparePart">
                             <mat-icon matSuffix>settings</mat-icon>
                         </mat-form-field>
-                        <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
+                        <mat-form-field appearance="outline" style="width: 80px;" class="container-form-array__inputs">
                             <mat-label>Cantidad</mat-label>
-                            <input matInput placeholder="Cantidad" formControlName="amount">
+                            <input matInput placeholder="Cantidad" formControlName="quantity">
                         </mat-form-field>
-                        <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
+                        <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
                             <mat-label>Nº de parte actual</mat-label>
                             <input matInput placeholder="Nº de parte actual" formControlName="currentPart">
                         </mat-form-field>
-                        <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
+                        <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
                             <mat-label>Nº de parte mejorada</mat-label>
                             <input matInput placeholder="Nº de parte mejorada" formControlName="improvedPart">
                         </mat-form-field>
@@ -78,15 +78,23 @@
                             <span>Kit</span>
                             <mat-checkbox class="checked-margin" color="primary" formControlName="kit"></mat-checkbox>
                         </div>
-                        <!-- Aqui va los stoks -->
+                        <mat-form-field appearance="outline" style="width:80px"   class="container-form-array__inputs">
+                            <mat-label>Stock</mat-label>
+                            <input matInput type="number" placeholder="Stock" formControlName="stock" min="0" step="1">
+                        </mat-form-field>
+                        <!-- <mat-form-field appearance="outline">
+                            <mat-label>Fecha de disponibilidad</mat-label>
+                            <input matInput [matDatepicker]="j" formControlName="availability">
+                            <mat-datepicker-toggle matSuffix [for]="j"></mat-datepicker-toggle>
+                            <mat-datepicker #j></mat-datepicker>
+                        </mat-form-field> -->
                     </div>
                 </div>
             </div>
         </mat-dialog-content>
         <mat-dialog-actions align="end">
             <button type="button" mat-stroked-button color="warn" mat-dialog-close>CERRAR</button>
-            <button type="submit" mat-raised-button [mat-dialog-close]="true" color="primary">ENVIAR</button>
+            <button type="submit" mat-raised-button color="primary" (click)="save()">ENVIAR</button>
         </mat-dialog-actions>
     </form>
 </div>
-
