--- a/src/app/main/pages/improvements/dialogs/create-dialog-improvenments/create-dialog-improvenments.component.scss
+++ b/src/app/main/pages/improvements/dialogs/create-dialog-improvenments/create-dialog-improvenments.component.scss
@@ -38,3 +38,21 @@
         margin: 18px 0;
     }
 }
+
+.footer {
+    text-align: end;
+    margin: 50px 10px 50px 10px;
+}
+
+.footer__btn-close {
+    color: #b00020;
+    border: 1px solid #b00020;
+    margin-right: 20px;
+    padding: 0px 30px 0px 30px;
+}
+
+.footer__btn-save {
+    background: #6200ee;
+    color: white;
+    padding: 0px 30px 0px 30px;
+}
