--- a/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.html
@@ -9,6 +9,6 @@
     ¿Estas seguro de borrar la mejora?
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-stroked-button mat-dialog-close color="warn" cdkFocusInitial>Cerrar</button>
-    <button mat-raised-button [mat-dialog-close]="true" color="primary">Si. Borrar</button>
+    <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save">ENVIAR</button>
 </mat-dialog-actions>
