--- a/src/app/main/pages/improvements/dialogs/edit-dialog-improvenments/edit-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/edit-dialog-improvenments/edit-dialog-improvenments.component.html
@@ -87,8 +87,8 @@
             </button>
         </mat-dialog-content>
         <mat-dialog-actions align="end">
-            <button type="button" mat-stroked-button color="warn" mat-dialog-close>CERRAR</button>
-            <button type="submit" mat-raised-button color="primary" (click)="save()">GUARDAR</button>
+            <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="save()">ENVIAR</button>
         </mat-dialog-actions>
     </form>
 </div>
