--- a/src/app/main/pages/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.scss
+++ b/src/app/main/pages/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.scss
@@ -24,19 +24,29 @@
     }
 }
 
-
-
-.checked-margin{
+.checked-margin {
     margin: 0 12px;
 }
 
-.container-form-array{
+.container-form-array {
     display: flex;
-    &__inputs{
+    &__inputs {
         margin-right: 20px;
     }
-    &__checked{
+    &__checked {
         display: flex;
         margin: 18px 0;
     }
+}
+
+.footer__btn-close {
+    color: #b00020;
+    border: 1px solid #b00020;
+    margin-right: 20px;
+    padding: 0px 30px 0px 30px;
+}
+.footer__btn-save {
+    background: #6200ee;
+    color: white;
+    padding: 0px 30px 0px 30px;
 }
