--- a/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.scss
+++ b/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.scss
@@ -1,3 +1,9 @@
+.container-h2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .footer__btn-close {
     color: #b00020;
     border: 1px solid #b00020;
