:art: :bug: botton close

--- a/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.html
@@ -7,7 +7,7 @@
             </span>
         </button>
         <button mat-icon-button mat-dialog-close>
-            <mat-icon style="color: gray;font-size: larger;">close</mat-icon>
+            <mat-icon style="color: gray;">close</mat-icon>
         </button>
     </div>
     <mat-divider></mat-divider>
