--- a/src/app/main/pages/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spare-parts/spare-parts.component.html
@@ -1,26 +1,26 @@
-
-
 <div class="container">
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">verified</mat-icon>
         <h1 style="font-size: 2.5em; margin-left: 20px;">Revisión de repuestos</h1>
-        
-        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)"
-            accept=".xls,.xlsx" id="fileInput2">
-            <button type="file" aria-label="add" mat-button class="btn-add"  accept=".csv,.xlsx" (click)="fileInput2.click()" >
-              <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-               ADJUNTAR SIS
-            </button> 
+
+        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
+            id="fileInput2">
+        <button type="file" aria-label="add" mat-button class="btn-add" accept=".csv,.xlsx"
+            (click)="fileInput2.click()">
+            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+            ADJUNTAR SIS
+        </button>
     </div>
     <div class="body-container">
         <h4 style="font-weight: bold;">Lista de partes</h4>
-
-            <form action="" *ngFor="let item of dataSparePart; let i=index" >
-                <div class="container-form-array" >  <!-- [formGroupName]="i" -->
+        <ng-container *ngIf="dataSparePart.length; else default">
+            <form action="" *ngFor="let item of dataSparePart; let i=index">
+                <div class="container-form-array">
+                    <!-- [formGroupName]="i" -->
                     <mat-form-field appearance="outline" style="width: 280px;" class="container-form-array__inputs">
                         <mat-label>Nombre</mat-label>
-                        <input matInput placeholder="Label"  [ngModel]="item.partName" name="partName">
-                       <!--  <mat-icon matSuffix>settings</mat-icon> -->
+                        <input matInput placeholder="Label" [ngModel]="item.partName" name="partName">
+                        <!--  <mat-icon matSuffix>settings</mat-icon> -->
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
                         <mat-label>Cantidad</mat-label>
@@ -37,7 +37,8 @@
 
                     <div class="container-form-array__checked">
                         <span>Kit</span>
-                        <mat-checkbox class="checked-margin" color="primary"  value="checked" (click)="changeValue(checked,i)" ></mat-checkbox>
+                        <mat-checkbox class="checked-margin" color="primary" value="checked"
+                            (click)="changeValue(checked,i)"></mat-checkbox>
                         <div *ngIf="selectCkeck===i">
                             <p *ngIf="checked" style="color: red; font-weight: bold;">Eliminado</p>
                         </div>
@@ -45,11 +46,17 @@
                     <!-- Aqui va los stoks -->
                 </div>
             </form>
+        </ng-container>
+        <ng-template #default>
+            <div class="default">
+                <span><mat-icon style="vertical-align: middle;">upload</mat-icon> Adjunte archivo</span>
+            </div>
+        </ng-template>
     </div>
-    <div class="footer">       
-        <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="downloadData()" > 
-             DESCARGAR
-        </button>         
-      </div>
-      
+    <div class="footer">
+        <button aria-label="add" mat-button class="footer__btn-save" (click)="downloadData()">
+            DESCARGAR
+        </button>
+    </div>
+
 </div>
