--- a/src/app/main/pages/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spare-parts/spare-parts.component.html
@@ -39,7 +39,7 @@
                         <span>Kit</span>
                         <mat-checkbox class="checked-margin" color="primary"  value="checked" (click)="changeValue(checked,i)" ></mat-checkbox>
                         <div *ngIf="selectCkeck===i">
-                            <p *ngIf="checked" style="color: red; font-weight: bold;">Eliminado</p>
+                            <p  style="color: red; font-weight: bold;">Eliminado</p>
                         </div>
                     </div>
                     <!-- Aqui va los stoks -->
