--- a/src/app/main/pages/settings/settings.component.html
+++ b/src/app/main/pages/settings/settings.component.html
@@ -13,60 +13,60 @@
   <div class="body-container">
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
     <div style="overflow: auto;">
-      <table mat-table [dataSource]="settingDataSource" class="mat-elevation-z8">
+      <table mat-table [dataSource]="settingDataSource" matSort  class="mat-elevation-z8">
 
         <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Fecha </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Fecha </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{element.date | date:"dd/MM/yyyy"}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="name" sticky>
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Nombre de Mejora </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Nombre de Mejora </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name}} </td>
         </ng-container>
         <ng-container matColumnDef="component">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Componente </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Componente </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component}} </td>
         </ng-container>
         <ng-container matColumnDef="model">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Modelo </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Modelo </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.model}} </td>
         </ng-container>
 
         <ng-container matColumnDef="media">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Media </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Media </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.media}} </td>
         </ng-container>
 
         <ng-container matColumnDef="quantity">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Cantidad </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Cantidad </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity}} </td>
         </ng-container>
 
         <ng-container matColumnDef="currentPart">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> N/P Actual </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Actual </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.currentPart}} </td>
         </ng-container>
 
         <ng-container matColumnDef="improvedPart">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> N/P Mejorado </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Mejorado </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.improvedPart}} </td>
         </ng-container>
 
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Descripción </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Descripción </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description}} </td>
         </ng-container>
 
         <ng-container matColumnDef="stock">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Stock </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Stock </th>
           <td mat-cell *matCellDef="let element" class="table__cell"> {{element.stock}} </td>
         </ng-container>
 
         <ng-container matColumnDef="availability">
-          <th mat-header-cell *matHeaderCellDef class="table__cell"> Disponibilidad </th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Disponibilidad </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{element.availability | date:"dd/MM/yyyy"}}
           </td>
