art: change title editar

--- a/src/app/main/pages/improvements/dialogs/edit-dialog-improvenments/edit-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/edit-dialog-improvenments/edit-dialog-improvenments.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 mat-dialog-title>
-        Validación de logística
+        Editar Ingreso de mejora
         <mat-divider></mat-divider>
     </h2>
     <form class="container-form" [formGroup]="editImprovenmentsForm" autocomplete="off">
